# booking_backend

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Readme.md  mainpage.dox  setEnv.sh
client/: CMakeLists.txt  Client.cpp  SimpleClient.cpp  simple_client.cpp
client/build_clent/: CMakeCache.txt  Makefile  cmake_install.cmake  movie_booking_client
include/Controller/: TcpServer.h
include/Factories/: SeatFactory.h
include/Interfaces/: IAdministrationService.h  IBookingService.h  IDataStore.h  ISeat.h  ITheater.h
include/Models/: AdministrationService.h  BookingService.h  CentralDataStore.h  Movie.h  Seat.h  Theater.h  VipSeat.h
include/Utils/: SeatTypeTraits.h  ThreadPool.h
include/aux/: ThreadPool.h
src/: main.cpp
src/Controller/: TcpServer.cpp
src/Models/: AdministrationService.cpp  BookingService.cpp  CentralDataStore.cpp  Movie.cpp  Seat.cpp  Theater.cpp  VipSeat.cpp
test/: functional_test_tcp.cpp
tests/: functional_test_tcp.cpp  unit_test.cpp
